--- a/AntoineBossé.html
+++ b/AntoineBossé.html
@@ -1,2 +1,2 @@
-<a href="">source</a>
-<a href="">site</a>
+<a href="https://github.com/Antoine-Bosse/labo5-AntoineBoss-" target="_blank">source</a>
+<a href="https://antoine-bosse.github.io/labo5-AntoineBoss-/Antoine-Boss%C3%A9.html" target="">site</a>
